# Multiplayer-Network-Conecpts

./: .gitignore  .hgignore  CMakeLists.txt  README.md
CMakeModules/: slGlobalMacros.cmake
distribute/data/configs/: NetworkStateExport.plist  Property List.plist  (+5 more)
nl_repository/source/: CMakeLists.txt
nl_repository/source/nl/application/: CMakeLists.txt  nlLauncherApplication.cpp  nlLauncherApplication.h  nlMain.cpp
nl_repository/source/nl/application/resources/: resource.h
nl_repository/source/nl/plugins/: CMakeLists.txt
nl_repository/source/nl/plugins/chatsample/: CMakeLists.txt  nlChatPeerOptionsUI.cpp  nlChatSample.cpp  nlChatSample.h  nlChatSamplePluginContent.cpp  nlChatSamplePluginContent.h
nl_repository/source/nl/plugins/cocosdemo3d/: demo3d.h
nl_repository/source/nl/plugins/cocosdemo3d/Cocosx_Demo3D/Classes/: AppDelegate.cpp  AppDelegate.h  CCMD2Model.cpp  HelloWorldScene.h  Layer3D.cpp
nl_repository/source/nl/plugins/cocosdemo3d/Cocosx_Demo3D/proj.win32.dll/: main.cpp
nl_repository/source/nl/plugins/cocossamples/: CMakeLists.txt
nl_repository/source/nl/plugins/cocossamples/TestCpp/Classes/: AppDelegate.cpp  AppDelegate.h
nl_repository/source/nl/plugins/cocossamples/TestCpp/Classes/Box2DTestBed/Tests/: Car.h  DistanceTest.h  PolyCollision.h  PolyShapes.h  TimeOfImpact.h
nl_repository/source/nl/plugins/cocossamples/TestCpp/proj.win32/: main.cpp
nl_repository/source/nl/plugins/quadlayersample/: CMakeLists.txt  nlQuadLayerSample.h
nl_repository/source/nl/plugins/replicasample/: CMakeLists.txt  nlReplicaSamplePluginContent.cpp  nlSampleReplica.h  nlSampleReplicaManager.cpp  nlSampleReplicaManager.h
nl_repository/source/nl/plugins/shared/: nlPluginExports.cpp  stdafx.h
nl_repository/source/nl/static_lib/nl/plugin/: nlPeerOptionsDialog.cpp  nlPeerOptionsDialog.h  nlPeerOptionsUI.cpp  nlPluginInfoDialog.h  nlPluginLayer.h  nlPluginLayerContent.cpp  nlPluginLayerContent.h  nlPluginOptionsDialog.cpp  stdafx.h
source/: cmake_install.cmake
source/CMakeModules/: nlMacros.cmake
source/nl/: CMakeLists.txt  readme.txt
source/nl/application/: nlLauncherApplication.cpp.orig  nlLauncherApplication.h.orig  stdafx.h
source/nl/application/resources/: game.rc
source/nl/lib/: CMakeLists.txt
source/nl/lib/core/platform/win32/: nlDllMain.cpp
source/nl/plugins/: CMakeLists.txt
source/nl/plugins/chatsample/: nlChatMacros.h  nlChatPeerOptionsUI.h  nlChatSample.cpp  nlChatSample.h  nlChatSamplePluginContent.cpp
source/nl/plugins/cocosdemo3d/: CMakeLists.txt  demo3d.cpp
source/nl/plugins/cocosdemo3d/Cocosx_Demo3D/Classes/: HelloWorldScene.cpp  Layer3D.h
source/nl/plugins/cocossamples/TestCpp/Classes/: AppDelegate.cpp
source/nl/plugins/cocossamples/TestCpp/Classes/Box2DTestBed/Tests/: ApplyForce.h  SensorTest.h
source/nl/plugins/cocossamples/TestCpp/Classes/ChipmunkTest/: ChipmunkTest.cpp
source/nl/plugins/cocossamples/TestCpp/Classes/SpineTest/: SpineTest.cpp
source/nl/plugins/multiplayersample/: CMakeLists.txt  nlChatNetPackageDispatcher.cpp  nlChatNetPackageDispatcher.h  nlTankVsTankClientLogicNode.cpp  nlTankVsTankClientLogicNode.h  nlTankVsTankGameLogicNode.cpp  nlTankVsTankGameLogicNode.h  nlTankVsTankGameplayLayer.cpp  nlTankVsTankPluginContent.cpp  nlTankVsTankPluginContent.h
source/nl/plugins/multiplayersample/components/: slTankWeaponComponent.cpp  slTankWeaponComponent.h
source/nl/plugins/multiplayersample/network/: GameStateReplicaComponent.cpp  GameStateReplicaComponent.h  nlDynamicActorReplicaComponent.cpp  nlDynamicActorReplicaComponent.h  nlGameContentReplicaManager.cpp  nlGameContentReplicaManager.h  nlGameStateReplicaComponent.cpp  nlGameStateReplicaComponent.h  nlLocalPlayerReplicaComponent.cpp  nlLocalPlayerReplicaComponent.h  nlPlayerReplicaComponent.cpp  nlPlayerReplicaComponent.h  nlProtocolStructures.h  nlReplicationRules.cpp  nlReplicationRules.h  nlTankPlayerReplicaComponent.cpp  nlTankPlayerReplicaComponent.h  nlTankProjectileReplicaComponent.cpp  nlTankProjectileReplicaComponent.h  nlTankReplicaComponent.cpp  nlTankReplicaComponent.h
source/nl/plugins/opensteersample/: CMakeLists.txt  nlOpenSteerSamplePluginContent.cpp  nlOpenSteerSamplePluginContent.h
source/nl/plugins/pedestriansample/: CMakeLists.txt  nlGameContentReplicaManager.cpp  nlGameContentReplicaManager.h  nlPedestrianSamplePluginContent.cpp  nlPedestrianSamplePluginContent.h  nlReplicaManagerUIActionDispatcher.cpp  nlReplicaManagerUIActionDispatcher.h  nlStudentReplicaComponent.cpp  nlStudentReplicaComponent.h
source/nl/plugins/quadlayersample/: nlQuadLayerSample.cpp
source/nl/plugins/replicasample/: nlReplicaSamplePluginContent.cpp  nlReplicaSamplePluginContent.h  nlSampleReplica.cpp  nlSampleReplicaManager.cpp
source/nl/plugins/shared/: targetver.h
source/nl/plugins/singlelayer/: CMakeLists.txt  nlSingleLayerPluginContent.cpp  nlSingleLayerPluginContent.h
source/nl/plugins/tankdemo/: CMakeLists.txt  nlReplicaManagerUIActionDispatcher.cpp  nlReplicaManagerUIActionDispatcher.h  nlTankVsTankClientLogicNode.cpp  nlTankVsTankClientLogicNode.h  nlTankVsTankGameplayLayer.cpp  nlTankVsTankGameplayLayer.h  nlTankVsTankPluginContent.cpp  nlTankVsTankPluginContent.h
source/nl/plugins/tankdemo/components/: slTankWeaponComponent.cpp  slTankWeaponComponent.h
source/nl/plugins/tankdemo/network/: nlDynamicActorReplicaComponent.cpp  nlGameContentReplicaManager.cpp  nlGameContentReplicaManager.h  nlLocalPlayerReplicaComponent.cpp  nlLocalPlayerReplicaComponent.h  nlPlayerReplicaComponent.cpp  nlProtocolStructures.cpp  nlProtocolStructures.h  nlReplicationRules.cpp  nlReplicationRules.h  nlTankPlayerReplicaComponent.cpp  nlTankProjectileReplicaComponent.cpp  nlTankProjectileReplicaComponent.h  nlTankReplicaComponent.cpp
source/nl/static_lib/nl/plugin/: CMakeLists.txt  nlOpensteerCommon.cpp  nlPeerOptionsUI.h  nlPlugin.h  nlPluginAPI.h  nlPluginInfoDialog.cpp  nlPluginLayer.cpp  nlPluginLayerContent.cpp  nlPluginLayerContent.h  nlPluginOptionsDialog.h  nlPluginTasksDialog.cpp  nlPluginTasksDialog.h
tasks/: Dokumentation.docx  lecture_task.txt
(+8 files in other folders)
